--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <!-- Zone Liste de contacts -->
-    <!-- Zone Liste de contacts -->
+    <!-- Zone Message -->
 </body>
 </html>
