--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Chat P2B</title>
 </head>
 <body>
-    <!-- Zone Liste de contacts -->
-    <!-- Zone Message -->
+    <main>
+        <!-- Zone Liste de contacts -->
+        <!-- Zone Message -->
+    </main>
+
 </body>
 </html>
