texte zone html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!-- 
+    Project : Chat P2B
+    Authors : Joao Araribá & Lucas Soares
+    Date : 27.04.2023 v1
+ -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +16,19 @@
     <main>
         <!-- Zone Liste de contacts -->
         <!-- Zone Message -->
+        <section id="messageZone">
+
+            <h1 id="contactName">Person name</h1>
+            <ul id="messageField">
+                <li>Hello, Lorem ipsum dolor sit amet consectetur adipisicing elit. Non reiciendis laboriosam eum magnam quae, sapiente fugit suscipit dolor, aut porro impedit temporibus facere, necessitatibus quibusdam minima possimus distinctio laudantium qui?</li>
+
+                <li>Hello, Lorem ipsum dolor sit amet consectetur adipisicing elit. Non reiciendis laboriosam eum magnam quae, sapiente fugit suscipit dolor, aut porro impedit temporibus facere, necessitatibus quibusdam minima possimus distinctio laudantium qui?</li>
+            </ul>
+            <form action="">
+                <input type="text" value="Type a message" name="message" id="message">
+                <input type="button" value="Send" name="send" id="sendBtn">
+            </form>
+        </section>
     </main>
 
 </body>
