--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/contactPopUp.css">
+    <script src="js/script.js" type="module"></script>
+
     <title>Chat P2B</title>
 </head>
 <body>
@@ -21,7 +23,6 @@
         <div id="ZoneContact">
             <img id="User" src="img/bingabongbi.png" alt="">
         </div>
-        <!-- Zone Liste de contacts -->
         <!-- Zone Message -->
         <section id="messageZone">
 
@@ -38,6 +39,5 @@
             </form>
         </section>
     </main>
-    <script src="js/script.js"></script>
 </body>
 </html>
