finishing message popup

--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
         <section id="messageZone">
 
             <h1 id="contactName">Person name</h1>
-            <ul id="messageField">
-                <li class="contact">Hello, Lorem ipsum dolor sit amet consectetur adipisicing elit. Non reiciendis laboriosam eum magnam quae, sapiente fugit suscipit dolor, aut porro impedit temporibus facere, necessitatibus quibusdam minima possimus distinctio laudantium qui?</li>
-
-                <li class="me">Hello, Lorem ipsum dolor sit amet consectetur adipisicing elit. Non reiciendis laboriosam eum magnam quae, sapiente fugit suscipit dolor, aut porro impedit temporibus facere, necessitatibus quibusdam minima possimus distinctio laudantium qui?</li>
-            </ul>
+            <ul id="messageField"></ul>
             <form id="inputZone" action="" method="post">
                 <input type="text" value="Type a message" name="message" id="message">
                 
