--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="css/MovementZone.css">
      <link rel="stylesheet" href="css/contactPopUp.css">
-     <script src="js/script.js" type="module"></script>
+     <script src="js/Main.js" type="module"></script>
  
      <title>Chat P2B</title>
  </head>
