--- a/html/login.html
+++ b/html/login.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/login.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+        <div id="sectionLogin">
+            <form action="" method="post">
+                <fieldset>
+                    <label for="login">Login</label>
+                    <input type="text" name="login" id="login">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password">
+                    <button>login</button>
+                </fieldset>
+
+            </form>
+        </div>
+    </main>
 </body>
 </html>
