--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
              </form>
          </section>
      </main>
-     <script src="js/MovementScript.js"></script>
+     <script type="module" src="js/MovementScript.js"></script>
  </body>
  </html>
