--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="css/MovementZone.css">
      <link rel="stylesheet" href="css/contactPopUp.css">
-     <script src="js/Main.js" type="module"></script>
+     <script src="js/ConversationScript.js" type="module"></script>
  
      <title>Chat P2B</title>
  </head>
@@ -23,7 +23,6 @@
          <!-- Zone Liste de contacts -->
          <div id="ZoneContact">
              <img id="User" src="img/bingabongbi.png" alt="">
-             <img class="Contacts" src="img/aonfsioa.png" alt="">
          </div>
          <!-- Zone Message -->
          <section id="messageZone">
