--- a/html/login.html
+++ b/html/login.html
@@ -12,8 +12,8 @@
         <div id="sectionLogin">
             <form action="" method="post">
                 <fieldset>
-                    <label for="login">Login</label>
-                    <input type="text" name="login" id="login">
+                    <label for="username">Login</label>
+                    <input type="text" name="username" id="username">
                     <label for="password">Password</label>
                     <input type="password" name="password" id="password">
                     <button>login</button>
@@ -22,5 +22,6 @@
             </form>
         </div>
     </main>
+    <script type="module" src="../js/Login.js"></script>
 </body>
 </html>
