--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
              <form id="inputZone" action="" method="post">
                  <input type="text" value="Type a message" name="message" id="message">
                  
-                 <input type="button" value="Send" name="send" id="sendBtn">
+                 <input type="submit" value="Send" name="send" id="sendBtn">
              </form>
          </section>
      </main>
